tests/samples/negative/visibility/private_field_access.ax
module private_field_access;

import samplelib.visibility as visibility;

fn main() -> i32 {
    let box = visibility.PublicBox {
        value: 1,
        secret: 2,
    };
    return box.secret;
}
